<resources>
    <string name="app_name">Adapter</string>
    <string name="add">Add</string>
    <string name="product_name_one">Product Name</string>
    <string name="product_code_one">Product code</string>
    <string name="quantity_one">Quantity</string>
    <string name="amount_one">Product Amount</string>
    <string name="product_name">Product Name</string>
    <string name="product_code">Product code</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
</resources>